=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================

Version 4.3.x CA
 - Changed: More corrections/additions for GEDFact_assistant (windmillway)
 - Merged: Merging r6673 through r6788 from the trunk (yalnifj)
 - Added favorites sidebar module (yalnifj)
 = Changed: More corrections/additions for GEDFact_assistant (windmillway)
 - Changed: Corrected some anomalies when persons name is "unknown" (windmillway)
 - Changed: Added Death Date calculations and Highlighting to Edit fields in Census Assistant (windmillway)
 - Changed: Removed unnecessary media tab config, and tidied up code (windmillway)
 - Fixed: Corrected the 1851 UK Census date error, and fixed a few 'Find' errors in GEDFact_assistant/_CENS/ (windmillway)
 - Fixed: Corrected the Find function error in GEDFact_assistant/_CENS/ (windmillway)
 - Added: A few more auto-fill functions for the GEDFact_assistant/_CENS/ edit fields. (windmillway)
 - Merged: Merge changes r6646 - r6671 from the trunk. (yalnifj)
 - Merged: Merge changes r6543 - r6645 from the trunk. (yalnifj)
 - Added Family Nav sidebar and Clippings sidebar, fixed sidebar rtl (yalnifj)
 - Merged: Merge changes r6538 - r6542 from the trunk. (windmillway)
 - Changed: Corrected logic when adding an assisted Shared Note when "Editing" an existing Census event. (windmillway)
 - Fixed: fix conflict with temp upgrade and initial install (yalnifj)
 - Merged: Merge changes r6536 - r6537 from the trunk. (windmillway)
 - Merged: Merge changes r6529 - r6535 from the trunk. (windmillway)
 - Changed: The Process of copying the Census Event to the multiple Indi id's stipulated in the assisted Shared Note window is now automated. Requires Trunk svn 6535 (windmillway)